added method to add reference genome as a query